--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "pg": "^8.13.0",
     "pg-hstore": "^2.3.4",
     "sequelize": "^6.37.3",
-    "sequelize-cli": "^6.6.2"
+    "sequelize-cli": "^6.6.2",
+    "zod": "^3.23.8"
   }
 }
